# EPITECH

1 Tek3/Crypto/SEC_crypto_2018/: Makefile
1 Tek3/Francais/FICTION2/: Fiction2-Romain.Roux.docx
1 Tek3/Maths/301dannon/: 301dannon.hpp  Makefile  algo.cpp  bubble.cpp  check.cpp  insert.cpp  list  (+2 more)
1 Tek3/fun_evalexpr/: Makefile  funEvalExpr  funEvalExpr.cabal
1 Tek3/gomoku/: CMakeLists.txt  compile.py  game.cpp
2 Tek3/AIA_gomoku_2019/: Makefile  game.cpp
3 Tek 3/Gomoku/: Makefile  game.cpp
Tek 2D/ASM_minilibc_2017/: Makefile  memcpy.asm  memset.asm  strcmp.asm  strlen.asm  strstr.asm
Tek 2D/CPP/CPP_babel_2018/: CMakeLists.txt  conanfile.txt
Tek 2D/CPP/CPP_babel_2018/include/client/: ATcpClient.hpp  Audio.hpp  Client.hpp  Encoder.hpp  Login.hpp  Registered.hpp  TcpClient.hpp  UDPsocket.hpp  moc_ATcpClient.cpp_parameters  moc_Login.cpp  moc_Login.cpp_parameters  moc_Registered.cpp  moc_Registered.cpp_parameters  moc_TcpClient.cpp  moc_TcpClient.cpp_parameters  moc_UDPSocket.cpp_parameters  moc_UDPsocket.cpp
Tek 2D/CPP/CPP_babel_2018/include/common/: Instructor.hpp
Tek 2D/CPP/CPP_babel_2018/include/server/: ATcpCo.hpp  Account.hpp  Server.hpp  Tcpconnect.hpp
Tek 2D/CPP/CPP_babel_2018/sources/client/: Audio.cpp  Encoder.cpp  Login.cpp  Registered.cpp  TcpClient.cpp  UDPSocket.cpp  client.cpp  client_main.cpp
Tek 2D/CPP/CPP_babel_2018/sources/common/: Instructor.cpp
Tek 2D/CPP/CPP_babel_2018/sources/server/: Account.cpp  Server.cpp  TcpClient.cpp  Tcpconnect.cpp  server_main.cpp
Tek 2D/bollinger_2017/: Makefile  bollinger.cpp  bollinger.hpp  main.cpp
(+700 files in other folders)
