project(Babel)
set(CMAKE_AUTOMOC ON)
cmake_minimum_required(VERSION 2.8.12)
add_definitions("-fPIC")
include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
set(INCLUDE_S ${CMAKE_BINARY_DIR}/include/server)
set(INCLUDE_A ${CMAKE_BINARY_DIR}/include/common)
set(INCLUDE_C ${CMAKE_BINARY_DIR}/include/client)
set(SOURCES_S ${CMAKE_BINARY_DIR}/sources/server)
set(SOURCES_A ${CMAKE_BINARY_DIR}/sources/common)
set(SOURCES_C ${CMAKE_BINARY_DIR}/sources/client)
include_directories(${INCLUDE_S})
include_directories(${INCLUDE_A})
include_directories(${INCLUDE_C})
conan_basic_setup()

find_package(Qt5Widgets CONFIG REQUIRED)
find_package(Qt5Core CONFIG REQUIRED)
find_package(Qt5Network CONFIG REQUIRED)
find_package(Boost)
add_executable(babel ${SOURCES_A}/Instructor.cpp ${SOURCES_S}/server_main.cpp ${SOURCES_S}/Server.cpp ${SOURCES_S}/Account.cpp ${SOURCES_S}/Tcpconnect.cpp)
qt5_wrap_cpp(MOCFILES ${INCLUDE_C}/ATcpClient.hpp ${INCLUDE_C}/TcpClient.hpp ${INCLUDE_C}/Login.hpp ${INCLUDE_C}/Registered.hpp ${INCLUDE_C}/UDPsocket.hpp)
add_executable(client_bin ${SOURCES_C}/client_main.cpp ${SOURCES_C}/client.cpp ${SOURCES_C}/TcpClient.cpp ${SOURCES_A}/Instructor.cpp ${SOURCES_C}/Login.cpp ${SOURCES_C}/Registered.cpp ${SOURCES_C}/Audio.cpp ${SOURCES_C}/Encoder.cpp ${SOURCES_C}/UDPSocket.cpp ${MOCFILES})
target_link_libraries(babel ${CONAN_LIBS})
target_link_libraries(client_bin Qt5::Widgets Qt5::Network Qt5::Widgets ${CONAN_LIBS})